--- a/style.css
+++ b/style.css
@@ -1,18 +1,22 @@
 :root {
-  --background-color: hsl(222, 26%, 31%);
-  --display-color: hsl(224, 36%, 15%);
-  --toggle-background: hsl(223, 31%, 20%);
-  --display-text: white;
-  --key-color: hsl(221, 14%, 31%);
-  --key-background: hsl(30, 25%, 89%);
-  --key-shadow: hsl(224, 28%, 35%);
-  --reset-key-bg: hsl(6, 63%, 50%);
-  --reset-key-shadow: hsl(6, 70%, 34%);
-  --equal-key: hsl(30, 25%, 89%);
-  --equal-key-shadow: hsl(28, 16%, 65%);
+  /* Backgrounds */
+  --main-bg: hsl(222, 26%, 31%); /*equal, body*/
+  --toggle-bg-keypad-bg: hsl(223, 31%, 20%); /*calculator bg*/
+  --screen-bg: hsl(224, 36%, 15%); /*display bg*/
+  /* Keys */
+  --keys-bg: hsl(30, 25%, 89%); /*Button bg*/
+  --keys-color: hsl(221, 14%, 31%); /*Button color*/
+  --key-shadow: hsl(28, 16%, 65%);
+
+  --reset-background-toggle: hsl(6, 63%, 50%); /*Reset BG*/
+  --key-shadow-reset: hsl(6, 70%, 34%);
+  --key-shadow-equal: hsl(224, 28%, 35%);
+  /* text */
+  --display-text-color: hsl(0, 0%, 100%);
 }
+
 body {
-  background-color: var(--background-color);
+  background-color: var(--main-bg);
 }
 
 .container {
@@ -25,8 +29,8 @@ body {
 #display-box {
   border: none;
   width: 300px;
-  background-color: var(--display-color);
-  color: var(--display-text);
+  background-color: var(--screen-bg);
+  color: var(--display-text-color);
   height: 50px;
   border-radius: 5px;
   padding-left: 13px;
@@ -35,7 +39,7 @@ body {
 }
 
 .calculator {
-  background-color: var(--display-color);
+  background-color: var(--toggle-bg-keypad-bg);
   border-radius: 5px;
 }
 
@@ -44,8 +48,8 @@ body {
   margin: 5px;
   border: none;
   border-radius: 6px;
-  color: var(--key-color);
-  background: var(--key-background);
+  color: var(--keys-color);
+  background: var(--keys-bg);
   font-weight: bold;
   height: 40px;
   width: 65px;
@@ -53,12 +57,12 @@ body {
 
 #reset {
   color: white;
-  background-color: var(--reset-key-bg);
+  background-color: var(--reset-background-toggle);
   box-shadow: 0 3px 1px 0px var(--reset-key-shadow);
   width: 145px;
 }
 #equal {
-  background-color: var(--background-color);
+  background-color: var(--main-bg);
   width: 145px;
   color: white;
 }
